<resources>
    <string name="app_name">MineSweeper</string>

    <string name="classic_game">Classic Game</string>
    <string name="stage_game">Stage Game</string>

    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="custom">Custom</string>

    <string name="record">Record</string>

    <string name="height">Height</string>
    <string name="width">Width</string>

    <string name="happy_icon">^_^</string>
    <string name="sad_icon">*_*</string>
    <string name="clicking_icon">0v0</string>
    <string name="gaming_icon">$_$</string>

    <string name="ok">OK</string>
    <string name="success">Success!</string>
    <string name="time_used">Time Used</string>
    <string name="seconds">s</string>

    <string name="size_range">Height and width should be within the range</string>
    <string name="mines_range">Number of mines should be within the range</string>
</resources>
